ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rails-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: rails.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rails-app
                port:
                  number: 3000
